# foxy-deployment

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix
assets/go1/: README.md  go1.xml  scene.xml
foxy/: calibrate_go1.py  command_profile.py  deployment_runner.py  gui.py  mujoco_agent.py  run_policy.py
go1agent/: CMakeLists.txt  default.nix  setup.py
go1agent/src/: agent.cc  agent.h  go1agent.cc
notebooks/: go1_step_response_analysis.ipynb
